--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ p {
 
 }
 
+.logo span{
+    color:  rgb(195, 27, 246);
+}
+
 .logo img {
     width: 40px;
     height: 40px;
@@ -661,6 +665,58 @@ p {
     width: 20px;
 }
 
+
+
+.clogo p {
+    letter-spacing: 0.5px;
+    color:rgb(209, 198, 198) !important;
+    text-align: center;
+    font-weight: 400;
+    margin-top: 10px;
+}
+
+.clogo img {
+    width: 150px;
+    margin-bottom: -10px;
+}
+
+@media (max-width:600px) {
+
+    .clogo img{
+        width: 120px;
+        margin-top: 30px;
+    }
+
+    .clogo p{
+        font-size: 13px;
+        
+    }
+}
+
+
+.footer a{
+    text-decoration: none;
+    color: #ce0505;
+}
+
+.cfooter{
+   
+    align-items: center;
+}
+
+.cfooter p{
+    color:rgb(209, 198, 198) !important;
+    padding-bottom: 30px;
+
+}
+
+
+@media (min-width:600px) {
+    .cfooter{
+        padding-right: 0px !important;
+        padding-left: 5% !important;
+    }
+}
 
 
 
